tests/netconvert/import/XML/errors/xml_false_edg/errors.netconvert
Error: Could not open edges-file 'hokkaido2.edg.xml'.
Error: No edges loaded.
Quitting (on error).
